--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "greenlet>=3.2.4",
+    "httpx>=0.28.1",
     "lxmlsoup>=1.6",
     "ruff>=0.12.11",
     "sqlalchemy>=2.0.43",
